updated loading animation

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
     <nav>
         
         <ul>
-            <li><a onclick="home()" id="homeg"></a></li>
-            <li><a onclick="effect_between_pages()" id="projectg"></a></li>
+            <li><a onclick="effect_between_pages('/')" id="homeg">g</a></li>
+            <li><a onclick="effect_between_pages('/projects.html')" id="projectg"></a></li>
             <li><a onclick="contact()" id="contactg"></a></li>
         </ul>
     </nav>
